# Binaries
noinst_PROGRAMS = rstation

rstation_LDADD = $(DEPENDENCIES_LIBS) -lz
rstation_SOURCES= \
RStation/Actor.cpp \
RStation/Actor.h \
RStation/AudioManager.cpp \
RStation/AudioManager.h \
RStation/FileManager.cpp \
RStation/FileManager.h \
RStation/GameLoop.cpp \
RStation/GameLoop.h \
RStation/ImageLoader.cpp \
RStation/ImageLoader.h \
RStation/INILoader.cpp \
RStation/INILoader.h \
RStation/InputManager.cpp \
RStation/InputManager.h \
RStation/KeyboardHandler.cpp \
RStation/KeyboardHandler.h \
RStation/Log.cpp \
RStation/Log.h \
RStation/LuaManager.cpp \
RStation/LuaManager.h \
RStation/MathUtils.cpp \
RStation/MathUtils.h \
RStation/MessageManager.cpp \
RStation/MessageManager.h \
RStation/MouseHandler.cpp \
RStation/MouseHandler.h \
RStation/PNGLoader.cpp \
RStation/PNGLoader.h \
RStation/Primitives.cpp \
RStation/Primitives.h \
RStation/RStation.cpp \
RStation/RStation.h \
RStation/RSUtil.cpp \
RStation/RSUtil.h \
RStation/SceneManager.cpp \
RStation/SceneManager.h \
RStation/Screen.cpp \
RStation/Screen.h \
RStation/ShaderLoader.cpp \
RStation/ShaderLoader.h \
RStation/ShaderManager.cpp \
RStation/ShaderManager.h \
RStation/Sound.cpp \
RStation/Sound.h \
RStation/Sprite.cpp \
RStation/Sprite.h \
RStation/TextureManager.cpp \
RStation/TextureManager.h \
RStation/Timer.cpp \
RStation/Timer.h \
RStation/TimingData.h \
RStation/Tween.cpp \
RStation/Tween.h \
RStation/Type.cpp \
RStation/Type.h
